# Panda_Movement

./: CMakeLists.txt  README.md  arm_client.py  arm_server.py  package.xml  robot.action  robot_geo.action
action/: robot_geo.action
demo/nodes/: rot_trans  rot_trans_L3
launch/: all.launch
nodes/: arm_client.py  arm_server.py  move_copp.py  move_copp_copy.py
rviz/: joint_viewer.rviz
